[package]
edition = '2021'
name = 'template-mpmc-rust'
version = '0.1.0'
license = "MIT OR Apache-2.0"

[dependencies]
cubist-config = { git = "ssh://git@github.com/cubist-labs/cubist.git", package = "cubist-config" }
cubist-sdk = { git = "ssh://git@github.com/cubist-labs/cubist.git", package = "cubist-sdk" }

color-eyre = "0.6.2"
ethers = { version = "1.0.2"}
ethers-core = { version = "1.0.2" }
ethers-contract = { version = "1.0.2" }
ethers-providers = { version = "1.0.2" }
eyre = "0.6.8"
thiserror = "1.0.38"
tracing-subscriber = "0.3.16"
tokio = "1.24.1"
lazy_static = "1.4.0"
